--- a/src/components/ImageScroller/style.scss
+++ b/src/components/ImageScroller/style.scss
@@ -2,6 +2,13 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+
+    @media(max-width: 600px){
+        width: 100vw;
+        padding: 0 10px;
+        flex-direction: column;
+    }
+
 }
 
 .image-wrapper{
@@ -9,6 +16,9 @@
     width: 600px;
     overflow: hidden;
     position: relative;
+    @media(max-width: 600px){
+        width: 100vw;
+    }
 }
 .scroller-image {
     object-fit: contain; /* Ensures the image covers the box without distortion */
@@ -66,4 +76,68 @@
         }
     }
 
+    @media(max-width: 600px){
+        display: none;
+    }
+    
 }
+
+.phone-button-wrapper{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+    .button{
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: 50px; 
+            padding: 2px; 
+            background:linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%); 
+            -webkit-mask: 
+               linear-gradient(#fff 0 0) content-box, 
+               linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+                    mask-composite: exclude; 
+        }
+        display: grid;
+        text-align: center;
+        justify-content: center;
+        align-content: center;
+        p{
+            text-align: center;
+            background: linear-gradient(-90deg, rgba(255,64,102,1) 0%, rgba(255,241,106,1) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 2rem;
+        }
+
+        padding: 5px;
+        height: 60px;
+        width: 60px;        
+        border-radius: 50%;
+        transition: 1s;
+    }
+
+    .button:hover{
+        &::before {
+            content: none;
+        }
+
+        background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+        p{
+            color: #252525;
+            background: none;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: #252525;
+        }
+    }
+
+    @media(min-width: 600px){
+        display: none;
+    }
+    
+}
+
