--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -1,7 +1,7 @@
 .project-card {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   justify-content: center;
+  align-content: center;
   gap: 1vh;
 }
 .project-card .img-container {
