--- a/src/components/sections/projects/style.css
+++ b/src/components/sections/projects/style.css
@@ -4,4 +4,11 @@
   justify-content: center;
   padding: 5vh 0;
   gap: 10vw;
+}
+@media (max-width: 600px) {
+  #projects {
+    margin: 50px 0;
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
