--- a/src/app/style/home.css
+++ b/src/app/style/home.css
@@ -314,7 +314,7 @@ main.projectPage .links a:hover p {
   main.projectPage h1 {
     width: 100vw;
     text-align: center;
-    margin-top: 50%;
+    margin-top: 20vh;
     padding: 0 10px;
   }
   main.projectPage #info-text-container {
