--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -350,7 +350,7 @@ main.projectPage{
         h1{
             width: 100vw;
             text-align: center;
-            margin-top: 50%;
+            margin-top: 20vh;
             padding: 0 10px;
         }
 
