--- a/src/app/style/home.css
+++ b/src/app/style/home.css
@@ -3,6 +3,23 @@
   margin: 0;
   box-sizing: border-box;
 }
+*::-webkit-scrollbar {
+  width: 15px;
+  height: 12px;
+}
+*::-webkit-scrollbar-track {
+  background: #141414;
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+  border: 4px solid #141414;
+  background: linear-gradient(0deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 body {
   height: 100vh;
@@ -84,6 +101,9 @@ header #navbar a:hover::after {
 main {
   margin-top: 40vh;
 }
+main #opening-text-phone {
+  display: none;
+}
 main #introduction {
   background-image: url(../../assets/Images/background.jpg);
   background-size: cover;
@@ -117,6 +137,7 @@ main #introduction .img-container {
   top: 50%;
   transform: translate(0, -50%);
   right: 5%;
+  width: 20vw;
 }
 main #about-me {
   margin-top: 200px;
@@ -184,11 +205,25 @@ main #contact .contact-box p {
     width: 100vw;
     margin-top: 60%;
   }
+  main #opening-text-phone {
+    display: flex;
+  }
+  main #opening-text-phone #text-container-phone {
+    font-size: 3em;
+    background: none;
+    background: linear-gradient(135deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    padding: 0 8%;
+  }
   main #introduction {
     margin: 0 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column-reverse;
+    justify-content: center;
+    align-content: center;
   }
   main #introduction .img-container {
     /*display: none;*/
@@ -205,6 +240,7 @@ main #contact .contact-box p {
     width: 70vw;
   }
   main #introduction #opening-text {
+    display: none;
     -webkit-clip-path: none;
             clip-path: none;
   }
@@ -240,10 +276,10 @@ main #contact .contact-box p {
 main.projectPage {
   display: grid;
   justify-content: center;
-  align-content: center;
+  align-content: start;
   height: 100vh;
-  padding: 0 15vw;
-  margin: 15vh 0;
+  padding: 15vh 15vw;
+  margin: 0;
 }
 main.projectPage h1 {
   text-align: center;
@@ -272,6 +308,7 @@ main.projectPage .links {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+  padding: 10vh 0;
   gap: 10px;
 }
 main.projectPage .links a {
