--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -2,6 +2,30 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    &::-webkit-scrollbar {
+        width: 15px; // Width of vertical scrollbar
+        height: 12px; // Height of horizontal scrollbar
+        
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #141414; // Track color
+        border-radius: 10px; // Optional: rounded track
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #888; // Thumb color
+        border-radius: 10px; // Optional: rounded thumb
+        border: 4px solid #141414; // Optional: adds padding effect
+        background: linear-gradient(0deg, rgba(255,64,102,1) 0%, rgba(255,241,106,1) 100%)
+    }
+
+    // Hover effect on thumb
+    &::-webkit-scrollbar-thumb:hover {
+        background: #555; // Darker thumb on hover
+    }
+
 }
 
 body{
@@ -10,12 +34,10 @@ body{
     grid-template-rows: auto 1fr;
     font-family: UniversLTStd,sans-serif;
     background-color: #141414;
+
 }
 
 header{
-
-    
-
     position: fixed;
     z-index: 100;
     background-color: #141414db;
@@ -90,6 +112,11 @@ header{
 
 main{
     margin-top: 40vh;
+
+    #opening-text-phone{
+        display: none;
+    }
+
     #introduction{
         background-image: url(../../assets/Images/background.jpg);
         background-size: cover;
@@ -122,7 +149,8 @@ main{
             margin: 0;
             top: 50%;
             transform: translate(0, -50%);
-            right: 5%
+            right: 5%;
+            width: 20vw;
         }
     }
     #about-me{
@@ -202,11 +230,29 @@ main{
         width: 100vw;
         margin-top: 60%;
 
+        #opening-text-phone{
+            display: flex;
+            #text-container-phone{
+                
+                font-size: 3em;
+                background: none;
+                background: linear-gradient(135deg, rgba(255,64,102,1) 0%, rgba(255,241,106,1) 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+
+                text-align: center;
+                padding: 0 8%;
+                
+            }
+        }
+
         #introduction{
             margin: 0 10px;
             border-radius: 10px;
             display: flex;
             flex-direction: column-reverse;
+            justify-content: center;
+            align-content: center;
 
             .img-container{
                 /*display: none;*/
@@ -224,6 +270,7 @@ main{
             }
 
             #opening-text{
+                display: none;
                 #text-container{
                     width: 100vw;
                     text-align: center;
@@ -264,22 +311,22 @@ main{
 .featureImg {
     width: 100%;
     height: auto;
-  }
+}
 
 main.projectPage{
     display: grid;
     justify-content: center;
-    align-content: center;
+    align-content: start;
     height: 100vh;
-    padding: 0 15vw;
-    margin: 15vh 0;
+    padding: 15vh 15vw;
+    margin: 0;
 
     h1{
         text-align: center;
         font-size: 3rem;
         background: linear-gradient(-90deg, rgba(255,64,102,1) 0%, rgba(255,241,106,1) 100%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 
     #info-text-container{
@@ -303,6 +350,7 @@ main.projectPage{
         align-items: center;
         justify-content: center;
         margin-top: 20px;
+        padding: 10vh 0;
         gap: 10px;
 
         a{
