--- a/src/components/ProjectCard/style.scss
+++ b/src/components/ProjectCard/style.scss
@@ -17,6 +17,7 @@
             background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            font-size: 1.5rem;
         }
     }
     .button-container{
