--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -29,8 +29,9 @@
   background: none;
   border-radius: 20px;
   position: relative;
-  padding: 1vh 2.5em;
+  padding: 0.5rem 2.5em;
   overflow: hidden;
+  transition: 0.1s ease-in;
 }
 .project-card .button-container a p {
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
@@ -49,6 +50,7 @@
   mask-composite: exclude;
 }
 .project-card .button-container a:hover {
+  padding: 0.6rem 2.6em;
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
 }
 .project-card .button-container a:hover::before {
