--- a/src/app/style/home.css
+++ b/src/app/style/home.css
@@ -42,7 +42,7 @@ header {
 }
 header #logo span {
   font-size: 2.5em;
-  background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+  background: linear-gradient(90deg, #ff4066 0%, rgb(255, 241, 106) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
