--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -49,7 +49,7 @@ header{
     #logo{
         span{
             font-size: 2.5em;
-            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgba(255,241,106,1) 100%);
+            background: linear-gradient(90deg, #ff4066 0%, rgba(255,241,106,1) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
