--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -1,30 +1,69 @@
 .project-card {
-  display: grid;
+  display: flex;
   justify-content: center;
   align-content: center;
-  gap: 1vh;
+  gap: 2rem;
 }
-.project-card .img-container {
+
+.featureImg {
+  width: 100%;
+  height: auto;
+}
+
+.img-container {
   position: relative;
   overflow: hidden;
-  height: 15em;
-  width: 20em;
+  height: 20em;
+  width: 25em;
   border-radius: 20px;
 }
-.project-card .project-title {
+
+.project-info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 20rem;
+  justify-content: space-between;
+}
+.project-info .project-technologies {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+  width: 100%;
+  overflow: hidden;
+}
+.project-info .desc {
+  position: relative;
+}
+.project-info .desc p {
+  max-width: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3; /* Limits text to 2 lines; adjust as needed */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1rem;
+}
+
+.project-title {
   text-align: center;
 }
-.project-card .project-title p {
+.project-title p {
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 1.5rem;
 }
-.project-card .button-container {
+
+.button-container {
   display: flex;
   justify-content: center;
 }
-.project-card .button-container a {
+.button-container a {
   cursor: pointer;
   background: none;
   border-radius: 20px;
@@ -33,12 +72,12 @@
   overflow: hidden;
   transition: 0.1s ease-in;
 }
-.project-card .button-container a p {
+.button-container a p {
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.project-card .button-container a::before {
+.button-container a::before {
   content: "";
   position: absolute;
   inset: 0;
@@ -49,21 +88,16 @@
   -webkit-mask-composite: xor;
   mask-composite: exclude;
 }
-.project-card .button-container a:hover {
+.button-container a:hover {
   padding: 0.6rem 2.6em;
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
 }
-.project-card .button-container a:hover::before {
+.button-container a:hover::before {
   content: none;
 }
-.project-card .button-container a:hover p {
+.button-container a:hover p {
   color: #252525;
   background: none;
   -webkit-background-clip: text;
   -webkit-text-fill-color: #252525;
-}
-
-.featureImg {
-  width: 100%;
-  height: auto;
 }/*# sourceMappingURL=style.css.map */
