--- a/src/components/ProjectCard/style.scss
+++ b/src/components/ProjectCard/style.scss
@@ -1,74 +1,112 @@
 .project-card{
-    display: grid;
+    display: flex;
     justify-content: center;
     align-content: center;
-    gap: 1vh;
-    .img-container{
-
-        position: relative;
-        overflow: hidden;
-        height: 15em;
-        width: 20em;
-        border-radius: 20px;
-    }
-    .project-title{
-        text-align: center;
-        p{
-            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 1.5rem;
-        }
-    }
-    .button-container{
-        display: flex;
-        justify-content: center;
-        a{
-            cursor: pointer;
-            p{
-                background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-            background: none;
-            border-radius: 20px;
-            position: relative;
-            padding: 0.5rem 2.5em;
-            overflow: hidden;
-            transition: 0.1s ease-in;
-
-            &::before {
-                content: "";
-                position: absolute;
-                inset: 0;
-                border-radius: 50px; 
-                padding: 2px; 
-                background:linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%); 
-                -webkit-mask: 
-                   linear-gradient(#fff 0 0) content-box, 
-                   linear-gradient(#fff 0 0);
-                -webkit-mask-composite: xor;
-                        mask-composite: exclude; 
-            }
-            &:hover{
-                padding: 0.6rem 2.6em;
-                &::before {
-                    content: none;
-                }
-
-                background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
-                p{
-                    color: #252525;
-                    background: none;
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: #252525;
-                }
-            }
-        }
-    }
+    gap: 2rem;
+    
 }
 
 .featureImg {
     width: 100%;
     height: auto;
   }
+
+  .img-container{
+
+    position: relative;
+    overflow: hidden;
+    height: 20em;
+    width: 25em;
+    border-radius: 20px;
+}
+
+.project-info{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    justify-content: space-between;
+
+    .project-technologies{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 5px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .desc{
+        position: relative;
+        
+        p{
+            max-width: 100%;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3; /* Limits text to 2 lines; adjust as needed */
+            overflow: hidden;
+            text-overflow: ellipsis;
+            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 1rem;
+        }
+    }
+}
+
+.project-title{
+    text-align: center;
+    p{
+        background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 1.5rem;
+    }
+}
+
+.button-container{
+    display: flex;
+    justify-content: center;
+    a{
+        cursor: pointer;
+        p{
+            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        background: none;
+        border-radius: 20px;
+        position: relative;
+        padding: 0.5rem 2.5em;
+        overflow: hidden;
+        transition: 0.1s ease-in;
+
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: 50px; 
+            padding: 2px; 
+            background:linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%); 
+            -webkit-mask: 
+               linear-gradient(#fff 0 0) content-box, 
+               linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+                    mask-composite: exclude; 
+        }
+        &:hover{
+            padding: 0.6rem 2.6em;
+            &::before {
+                content: none;
+            }
+
+            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+            p{
+                color: #252525;
+                background: none;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: #252525;
+            }
+        }
+    }
+}
