--- a/src/components/ImageScroller/style.css
+++ b/src/components/ImageScroller/style.css
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 }
 
@@ -81,7 +81,8 @@
   transition: background-color 0.3s;
 }
 .indicator.active {
-  background-color: rgb(255, 64, 102);
+  background: linear-gradient(0deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%); /* Gradient for active indicator */
+  transform: scale(1.2); /* Slightly larger when active */
 }
 .indicator:hover {
   background-color: rgba(255, 64, 102, 0.7);
@@ -105,7 +106,7 @@
   border-radius: 50px;
   padding: 2px;
   background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
-  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
 }
@@ -124,5 +125,5 @@
   content: none;
 }
 .button:hover .arrow-icon {
-  stroke: #fff; /* White stroke on hover for contrast */
+  stroke: #252525; /* White stroke on hover for contrast */
 }/*# sourceMappingURL=style.css.map */
