--- a/src/components/ImageScroller/style.scss
+++ b/src/components/ImageScroller/style.scss
@@ -52,7 +52,7 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 10px;
+      margin-top: 20px;
     }
   }
   
@@ -73,7 +73,8 @@
     padding: 0;
     transition: background-color 0.3s;
     &.active {
-      background-color: rgba(255, 64, 102, 1);
+      background: linear-gradient(0deg, rgba(255, 64, 102, 1) 0%, rgb(255, 241, 106) 100%); /* Gradient for active indicator */
+      transform: scale(1.2); /* Slightly larger when active */
     }
     &:hover {
       background-color: rgba(255, 64, 102, 0.7);
@@ -98,7 +99,7 @@
       border-radius: 50px;
       padding: 2px;
       background: linear-gradient(90deg, rgba(255, 64, 102, 1) 0%, rgb(255, 241, 106) 100%);
-      -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+      -webkit-mask: linear-gradient(90deg, rgba(255, 64, 102, 1) 0%, rgb(255, 241, 106) 100%) content-box, linear-gradient(#fff 0 0);
       -webkit-mask-composite: xor;
       mask-composite: exclude;
     }
@@ -118,7 +119,7 @@
         content: none;
       }
       .arrow-icon {
-        stroke: #fff; /* White stroke on hover for contrast */
+        stroke: #252525; /* White stroke on hover for contrast */
       }
     }
   }
