--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -4,6 +4,11 @@
   align-content: center;
   gap: 2rem;
 }
+@media (max-width: 600px) {
+  .project-card {
+    flex-direction: column;
+  }
+}
 
 .featureImg {
   width: 100%;
@@ -16,6 +21,12 @@
   height: 20em;
   width: 25em;
   border-radius: 20px;
+}
+@media (max-width: 600px) {
+  .img-container {
+    width: 100%;
+    height: 28vh;
+  }
 }
 
 .project-info {
@@ -33,6 +44,11 @@
   width: 100%;
   overflow: hidden;
 }
+@media (max-width: 600px) {
+  .project-info .project-technologies {
+    display: none;
+  }
+}
 .project-info .desc {
   position: relative;
 }
@@ -48,6 +64,11 @@
   -webkit-text-fill-color: transparent;
   font-size: 1rem;
 }
+@media (max-width: 600px) {
+  .project-info .desc {
+    display: none;
+  }
+}
 
 .project-title {
   text-align: center;
@@ -57,6 +78,49 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 1.5rem;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+.button-container a {
+  cursor: pointer;
+  background: none;
+  border-radius: 20px;
+  position: relative;
+  padding: 0.5rem 2.5em;
+  overflow: hidden;
+  transition: 0.1s ease-in;
+}
+.button-container a p {
+  background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.button-container a::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50px;
+  padding: 2px;
+  background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+.button-container a:hover {
+  padding: 0.6rem 2.6em;
+  background: linear-gradient(90deg, rgb(255, 64, 102) 0%, rgb(255, 241, 106) 100%);
+}
+.button-container a:hover::before {
+  content: none;
+}
+.button-container a:hover p {
+  color: #252525;
+  background: none;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #252525;
 }
 
 .button-container {
