--- a/src/components/ProjectCard/style.scss
+++ b/src/components/ProjectCard/style.scss
@@ -3,7 +3,9 @@
     justify-content: center;
     align-content: center;
     gap: 2rem;
-    
+    @media (max-width: 600px) {
+        flex-direction: column;
+    }
 }
 
 .featureImg {
@@ -18,6 +20,10 @@
     height: 20em;
     width: 25em;
     border-radius: 20px;
+    @media (max-width: 600px) {
+        width: 100%;
+        height: 28vh;
+    }
 }
 
 .project-info{
@@ -34,6 +40,9 @@
         gap: 5px;
         width: 100%;
         overflow: hidden;
+        @media (max-width: 600px) {
+            display: none;
+        }
     }
 
     .desc{
@@ -51,6 +60,9 @@
             -webkit-text-fill-color: transparent;
             font-size: 1rem;
         }
+        @media (max-width: 600px) {
+            display: none;
+        }
     }
 }
 
@@ -61,6 +73,53 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: 1.5rem;
+    }
+}
+
+.button-container{
+    display: flex;
+    justify-content: center;
+    a{
+        cursor: pointer;
+        p{
+            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        background: none;
+        border-radius: 20px;
+        position: relative;
+        padding: 0.5rem 2.5em;
+        overflow: hidden;
+        transition: 0.1s ease-in;
+
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: 50px; 
+            padding: 2px; 
+            background:linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%); 
+            -webkit-mask: 
+               linear-gradient(#fff 0 0) content-box, 
+               linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+                    mask-composite: exclude; 
+        }
+        &:hover{
+            padding: 0.6rem 2.6em;
+            &::before {
+                content: none;
+            }
+
+            background: linear-gradient(90deg, rgba(255,64,102,1) 0%, rgb(255, 241, 106) 100%);
+            p{
+                color: #252525;
+                background: none;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: #252525;
+            }
+        }
     }
 }
 
