--- a/src/components/sections/projects/style.css
+++ b/src/components/sections/projects/style.css
@@ -66,6 +66,6 @@
 @media (max-width: 600px) {
   .projects-section {
     margin: 50px 0;
-    padding: 0;
+    padding: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
