--- a/src/components/sections/projects/style.scss
+++ b/src/components/sections/projects/style.scss
@@ -64,6 +64,6 @@
   @media (max-width: 600px) {
     .projects-section {
       margin: 50px 0;
-      padding: 0;
+      padding: 20px;
     }
   }
